docs: update index page with a page structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<title>Viktoriia Khegay CV</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<header>
+		<figure>
+			<img src="" alt ="Photo">
+		</figure>
+		<h1>Viktoriia Khegai</h1>
+		<p>Junior Front-end developer</p>
+	</header>
+	<main>
+		<section>
+			<h2>Contacts:</h2>
+			<ul>
+				<li>e-mail: victoria_khegay@inbox.ru</li>
+				<li>Phone number:</li>
+			</ul>
+		</section>
+		<section>
+			<h2>Information:</h2>
+		</section>
+		<section>
+			<h2>Education:</h2>
+		</section>
+		<section>
+			<h2>English level:</h2>
+		</section>
+		<section>
+			<h2>Skills:</h2>
+			<ul>
+				<li>HTML</li>
+				<li>CSS</li>
+				<li>Still learning. ;)</li>
+			</ul>
+		</section>
+		<section>
+			<h2>Code sample:</h2>
+			<pre>
+			function even_or_odd(number) {
+			number = (number % 2)
+			if (number != 0) {
+			return 'Odd'
+			} else 
+			return 'Even'
+			}
+			</pre>
+		</section>
+		<section>
+			<h2>Work experience:</h2>
+		</section>
+	</main>
+	<footer></footer>
+</body>
+</html>
