--- a/index.html
+++ b/index.html
@@ -8,30 +8,35 @@
 <body>
 	<header>
 		<figure>
-			<img src="" alt ="Photo">
+			<img src="avatar.jpg" alt ="Photo">
 		</figure>
-		<h1>Viktoriia Khegai</h1>
-		<p>Junior Front-end developer</p>
+		<div class="header-text">
+			<h1>Viktoriia Khegai</h1>
+			<p><i>Future Front-end developer :)</i></p>
+		</div>
 	</header>
 	<main>
 		<section>
-			<h2>Contacts:</h2>
+			<h2>Contact</h2>
 			<ul>
 				<li>e-mail: victoria_khegay@inbox.ru</li>
-				<li>Phone number:</li>
+				<li>Phone number: +7 (961) 500 69 61</li>
 			</ul>
 		</section>
 		<section>
-			<h2>Information:</h2>
+			<h2>Information</h2>
+			<p>Will be added later. ;)</p>
 		</section>
 		<section>
-			<h2>Education:</h2>
+			<h2>Education</h2>
+			<p>Technological University of Tajikistan/Information systems in economics (2006 - 2011)</p>
 		</section>
 		<section>
-			<h2>English level:</h2>
+			<h2>English level</h2>
+			<p>B2</p>
 		</section>
 		<section>
-			<h2>Skills:</h2>
+			<h2>Skills</h2>
 			<ul>
 				<li>HTML</li>
 				<li>CSS</li>
@@ -39,21 +44,22 @@
 			</ul>
 		</section>
 		<section>
-			<h2>Code sample:</h2>
-			<pre>
-			function even_or_odd(number) {
-			number = (number % 2)
-			if (number != 0) {
-			return 'Odd'
-			} else 
-			return 'Even'
-			}
-			</pre>
+			<h2>Code sample</h2>
+<pre>function even_or_odd(number) {
+number = (number % 2)
+if (number != 0) {
+return 'Odd'
+} else 
+return 'Even'
+}</pre>
 		</section>
 		<section>
-			<h2>Work experience:</h2>
+			<h2>Experience</h2>
+			<p>Some tasks on Codewars, HTMLAcademy</p>
 		</section>
 	</main>
-	<footer></footer>
+	<footer>
+		<p>(c) All rights reserved. 2021</p>
+	</footer>
 </body>
 </html>
